Fixes for the MNIST demo.